--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "bson-objectid": "^2.0.4",
     "chart.js": "^4.4.1",
     "js-cookie": "^3.0.5",
+    "objectid": "^3.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
