--- a/client/package.json
+++ b/client/package.json
@@ -13,13 +13,13 @@
     "axios": "^1.6.2",
     "bson-objectid": "^2.0.4",
     "chart.js": "^4.4.1",
+    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
     "objectid": "^3.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-image-magnify": "^2.7.4",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
