added sales report with download

--- a/client/package.json
+++ b/client/package.json
@@ -13,14 +13,16 @@
     "axios": "^1.6.2",
     "bson-objectid": "^2.0.4",
     "chart.js": "^4.4.1",
-    "file-saver": "^2.0.5",
     "js-cookie": "^3.0.5",
-    "objectid": "^3.2.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.1",
+    "objectid": "^2.3.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
