--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.8",
     "axios": "^1.6.2",
     "bson-objectid": "^2.0.4",
     "chart.js": "^4.4.1",
