--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-image-crop": "^11.0.5",
     "react-router-dom": "^6.20.0",
     "xlsx": "^0.18.5"
   },
