--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1",
     "objectid": "^2.3.0",
+    "pdfkit": "^0.16.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
