--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^2.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -26,6 +28,7 @@
     "nodemon": "^3.0.1",
     "path": "^0.12.7",
     "pdfkit": "^0.15.0",
-    "razorpay": "^2.9.2"
+    "razorpay": "^2.9.2",
+    "uninstall": "^0.0.0"
   }
 }
